Removed erroneous EGL and OpenGL | ES 2.0 libraries from the Linux build

--- a/Source/Linux/Makefile
+++ b/Source/Linux/Makefile
@@ -75,7 +75,7 @@ SYSIPATH	=
 INCPATH		=
 SYSLPATH	=	
 LIBPATH		=
-SYSLIBS		=	-lX11 -lGL -lXrandr -lrt -pthread -lXi -lGLESv2 -lEGL
+SYSLIBS		=	-lX11 -lGL -lXrandr -lrt -pthread -lXi
 LINKFLAGS	=
 
 ##### Debug #######
